ffimage: Add color module
Three (plus two alpha) pixel types are defined: Gray, Rgb[a], Bgr[a].
More types such as the YUV family will follow.

We need to think about how to handle formats like YUYV where one macropixel is
two image pixels.

Signed-off-by: Christopher N. Hesse <raymanfx@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,6 @@ version = "0.1.0"
 authors = ["Christopher N. Hesse <raymanfx@gmail.com>"]
 edition = "2018"
 license = "MIT"
+
+[dependencies]
+num-traits = "^0.2"
