ffimage: Add library prelude and README
Signed-off-by: Christopher N. Hesse <raymanfx@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,12 @@
 [package]
 name = "ffimage"
+description = "Foreign function image handling"
 version = "0.1.0"
 authors = ["Christopher N. Hesse <raymanfx@gmail.com>"]
 edition = "2018"
 license = "MIT"
+readme = "README.md"
+repository= "https://github.com/raymanfx/ffimage"
 
 [dependencies]
 num-traits = "^0.2"
