ffimage: Add Criterion.rs benchmarks
For now, this only includes image conversion benchmarks at two predefined
resolutions: 640x480 (VGA) and 1280x720 (HD720).

Signed-off-by: Christopher N. Hesse <raymanfx@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,9 @@ readme = "README.md"
 repository= "https://github.com/raymanfx/ffimage"
 
 [dependencies]
+criterion = "^0.3"
 num-traits = "^0.2"
+
+[[bench]]
+name = "bench_main"
+harness = false
