--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,8 +9,13 @@ readme = "README.md"
 repository= "https://github.com/raymanfx/ffimage"
 
 [dependencies]
+cfg-if = "0.1"
 criterion = "^0.3"
 num-traits = "^0.2"
+rayon = { version = "^1.0", optional = true }
+
+[features]
+default = ["rayon"]
 
 [[bench]]
 name = "bench_main"
