--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,9 +10,11 @@ repository= "https://github.com/raymanfx/ffimage"
 
 [dependencies]
 cfg-if = "0.1"
-criterion = "^0.3"
 num-traits = "^0.2"
 rayon = { version = "^1.0", optional = true }
+
+[dev-dependencies]
+criterion = "^0.3"
 
 [features]
 default = ["rayon"]
