--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ repository= "https://github.com/raymanfx/ffimage"
 
 [dependencies]
 cfg-if = "0.1"
+num = "^0.3"
 num-traits = "^0.2"
 rayon = { version = "^1.0", optional = true }
 
