CI: Run jobs in parallel
Signed-off-by: Christopher N. Hesse <raymanfx@gmail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,29 +10,22 @@ jobs:
       - CAN_FAIL=true
   fast_finish: true
   include:
-    - {}
-    - stage: check
+    - name: check
       script:
         - cargo check --no-default-features
         - cargo check --features rayon
-    - stage: test
+    - name: test
       script:
         - cargo test --no-default-features
         - cargo test --features rayon
-    - stage: fmt
+    - name: fmt
       before_script:
         - rustup component add rustfmt
       script:
         - cargo fmt -- --check
-    - stage: clippy
+    - name: clippy
       env: CAN_FAIL=true
       before_script:
         - rustup component add clippy
       script:
         - cargo clippy -- -D warnings
-
-stages:
-  - check
-  - test
-  - fmt
-  - clippy
