--- a/ffimage/Cargo.toml
+++ b/ffimage/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "ffimage"
 description = "Foreign function image handling"
-version = "0.8.2"
+version = "0.9.0"
 authors = ["Christopher N. Hesse <raymanfx@gmail.com>"]
 edition = "2018"
 license = "MIT"
@@ -9,13 +9,13 @@ readme = "README.md"
 repository= "https://github.com/raymanfx/ffimage"
 
 [dependencies]
-cfg-if = "0.1"
-num = "^0.3"
-num-traits = "^0.2"
-rayon = { version = "^1.0", optional = true }
+cfg-if = "1.0.0"
+num = "0.4.0"
+num-traits = "0.2.14"
+rayon = { version = "1.5.0", optional = true }
 
 [dev-dependencies]
-criterion = "^0.3"
+criterion = "0.3.4"
 
 [features]
 default = ["rayon"]
