Get rid of declarative macros
Instead, make use of const generic parameters. This comes with the
nice benefit of always knowing exactly which pixel type is being
used at compile time. The same goes for better error messages.

Using pure Rust code instead of macros should make for more readable
code hopefully and encourage contributors.

There is a bug in rustc 1.73.0 which breaks our tests. Use 1.72.0 for now.

Signed-off-by: Christopher N. Hesse <raymanfx@gmail.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,7 +45,7 @@ jobs:
     - name: Install rust
       uses: actions-rs/toolchain@v1
       with:
-        toolchain: stable
+        toolchain: 1.72.0
         override: true
         profile: minimal
     - name: Test
