Get rid of image types
They are not needed to accomplish the main task of this crate:
converting between various pixelformats using arbitrary buffers.

We now place the burden of choosing a suitable storage type onto
the caller. The caller can then iterate through the collection and
map each pixel individually (or multiple, in the case of macropixels).

Signed-off-by: Christopher N. Hesse <raymanfx@gmail.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,13 +17,6 @@ jobs:
   check:
     name: check
     runs-on: ubuntu-20.04
-    strategy:
-      matrix:
-        include:
-        - build: default
-          features: ""
-        - build: rayon
-          features: "--features rayon"
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
@@ -34,7 +27,7 @@ jobs:
         profile: minimal
         override: true
     - name: Check
-      run: cargo check --no-default-features ${{ matrix.features }}
+      run: cargo check
 
   test:
     name: test
