Do not enable default features for num-traits
This makes it not work in a no_std env otherwise.

Signed-off-by: Mary Guillemard <mary@mary.zone>

--- a/ffimage-yuv/Cargo.toml
+++ b/ffimage-yuv/Cargo.toml
@@ -14,7 +14,7 @@ default-features = false
 path = "../ffimage"
 
 [dependencies]
-num-traits = "0.2.15"
+num-traits = { version = "0.2.15", default-features = false }
 
 [dev-dependencies]
 criterion = "0.4.0"
